# installer-core

./: CMakeLists.txt  README.md  main.cpp
__cloudversity/: spec
__cloudversity/configs/: etc__cloudos__installer__settings__welcome.txt  etc__cloudversity__installer__core__settings__installer.proto.conf  etc__cloudversity__installer__core__settings__neutron.proto.conf  etc__cloudversity__installer__core__settings__system.proto.conf  etc__motd  usr__share__cloudos__installer__management.template.qcow2.xz
__cloudversity/scripts/: usr__share__cloudos__installer__check_disk.sh  usr__share__cloudos__installer__create_vdisk.sh  usr__share__cloudos__installer__finish_management.sh  usr__share__cloudos__installer__install.sh  usr__share__cloudos__installer__install_finish.sh  usr__share__cloudos__installer__prepare_chroot.sh  usr__share__cloudos__installer__prepare_disk.sh  usr__share__cloudos__installer__zypper_install_rpms.sh  usr__share__cloudversity__installer__core__create_vdisk.sh  usr__share__cloudversity__installer__core__finish_management.sh  usr__share__cloudversity__installer__core__install.sh  usr__share__cloudversity__installer__core__install_finish.sh
__cloudversity/services/: installer-core.service
src/: Installer.cpp  Installer.hpp
